apps/staging/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: couchdb-http
  namespace: couchdb-stage
spec:
  hostnames:
    - obsidian.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: couchdb-https
  namespace: couchdb-stage
spec:
  hostnames:
    - obsidian.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: couchdb
          port: 5984
